# CodeFlowAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: main.py
src/config/: env_vars.py
src/system_prompts/: document_updater.txt
tests/: test_basic.py
